--- a/.github/workflows/Main-Working.yml
+++ b/.github/workflows/Main-Working.yml
@@ -22,7 +22,7 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build NetPodcast.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.GITHUB_WORKSPACE}}\myapp"
